--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nuxtjs/axios": "^5.13.6",
     "body-parser": "^1.19.0",
     "core-js": "^3.15.1",
+    "cron": "^1.8.2",
     "express": "^4.17.1",
+    "nodemailer": "^6.7.1",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
   },
