--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.15.1",
     "express": "^4.17.1",
     "nuxt": "^2.15.7",
+    "svg-pan-zoom": "^3.6.1",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
